--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   dart_frog: ^1.1.0
   dart_frog_request_logger: ^0.0.2
+  postgres: ^3.5.6
   uuid: ^4.5.1
 
 dev_dependencies:
