--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,13 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - DATABASE_HOST=${DATABASE_HOST}
+      - DATABASE_HOST=postgres  # Фиксированное значение для Docker
+      - DATABASE_PORT=5432
       - DATABASE_NAME=${DATABASE_NAME}
       - DATABASE_USERNAME=${DATABASE_USERNAME}
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+    networks:
+      - app-network
     depends_on:
       postgres:
         condition: service_healthy
@@ -18,20 +21,26 @@ services:
       context: ./migration
       dockerfile: Dockerfile
     environment:
-      - POSTGRES_DB=${DATABASE_HOST}
+      - POSTGRES_DB=${DATABASE_NAME}  # Исправлено с DATABASE_HOST на DATABASE_NAME
       - POSTGRES_USER=${DATABASE_USERNAME}
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DATABASE_USERNAME} -d postgres"]
+      test: ["CMD-SHELL", "pg_isready -U ${DATABASE_USERNAME} -d ${DATABASE_NAME}"]
       interval: 10s
       timeout: 5s
       retries: 3
       start_period: 10s
     restart: unless-stopped
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   postgres_data:
