--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DATABASE_HOST=postgres
 DATABASE_NAME=mydb
 DATABASE_USERNAME=alexsandrbangert
 DATABASE_PASSWORD=your_secure_password
+SECRET_KEY=your_secret_key
